--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 
     .card:hover .info {
       opacity: 1;
-      transform: translateY(30%);
+      transform: translateY(5%);
     }
 
     .card:before {
@@ -68,12 +68,10 @@
       display: block;
       width: 100%;
       height: 100%;
-      /* border-radius: 1px; */
-      background: rgba(0, 0, 0, 0.7);
+      background: rgba(0, 0, 0, 0.75);
       z-index: 2;
       transition: 0.3s;
       opacity: 0;
-      /* transform: translateY(100%); */
     }
 
     .card img {
@@ -84,7 +82,6 @@
       position: absolute;
       top: 0;
       left: 0;
-      /* border-radius: 15px; */
     }
 
     .card .info {
@@ -115,13 +112,18 @@
 
     .name {
       position: absolute;
-      bottom: 1rem;
-      left: 1rem;
+      bottom: 2.2rem;
+      left: 0.6rem;
       color: #fff;
       z-index: 1;
       padding: 4px 10px;
-      font-size: 1.4rem;
+      font-size: 1.6rem;
       font-weight: 600;
+    }
+    .second-name{
+      bottom: 0.8rem;
+      left: 0.6rem;
+      font-size: 1rem;
     }
 
     .linkedin-icon {
@@ -147,7 +149,7 @@
 
     .section-header {
       width: 100%;
-      background-color: #a5bcdd;
+      background-color: #072032;
       padding: 4rem 0 280px 0;
       margin-top: 80px;
     }
@@ -330,40 +332,47 @@
               <div class="card"><img
                   src="https://images.unsplash.com/photo-1425342605259-25d80e320565?auto=format&amp;fit=crop&amp;w=750&amp;q=80&amp;ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" />
                 <div class="info">
-                  <h1>Road</h1>
-                  <p>Lorem Ipsum is simply dummy text from the printing and typeseting industry </p>
+                  
+                  <p class="fw-bold fs-6">Co-founder, OfBusiness | Co-founder Oxyzo</p>
+                  <p>Nitin has co-founded 2 unicorns and has scaled multiple businesses to $100M+ valuation. He has been
+                    named in the Forbes India Tycoons of Tomorrow 2021 list and has won the ET Startup of the Year 2023.
+                  </p>
                   <a href="/"><i class="fa-brands fa-linkedin fa-xl linkedin-icon"></i></a>
                 </div>
-                <p class="name">Kalim Ali</p>
+                <p class="name">Nitin Jain</p>
+                <p class="name second-name">IIT Delhi Silver Medalist</p>
               </div>
               <div class="card"><img
                   src="https://images.unsplash.com/photo-1477666250292-1419fac4c25c?auto=format&amp;fit=crop&amp;w=667&amp;q=80&amp;ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" />
                 <div class="info">
-                  <h1>Mountain</h1>
-                  <p>Lorem Ipsum is simply dummy text from the printing and typeseting industry</p>
+                  <p class="fw-bold fs-6">Ex-McKinsey | Ex-Head of Strategy, Ratio</p>
+                  <p>Kabir is a StraOps consultant turned operator. He has scaled multiple consumer tech products and categories at MPL and Rario.</p>
                   <a href="/"><i class="fa-brands fa-linkedin fa-xl linkedin-icon"></i></a>
                 </div>
-                <p class="name">Kalim Ali</p>
+                <p class="name">Kabir Khattar</p>
+                <p class="name second-name">IIM Lucknow</p>
               </div>
 
 
               <div class="card"><img
                   src="https://images.unsplash.com/photo-1477666250292-1419fac4c25c?auto=format&amp;fit=crop&amp;w=667&amp;q=80&amp;ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" />
                 <div class="info">
-                  <h1>Mountain</h1>
-                  <p>Lorem Ipsum is simply dummy text from the printing and typeseting industry</p>
+                  <p class="fw-bold fs-6">Ex-CEO & Founder, FTL</p>
+                  <p>Shaaz is a tech entrepreneur and public speaker specializing in the AI/ML domain. He has authored influential AI papers and has scaled a gaming startup.</p>
                   <a href="/"><i class="fa-brands fa-linkedin fa-xl linkedin-icon"></i></a>
                 </div>
-                <p class="name">Kalim Ali</p>
+                <p class="name">Syed Shaaz</p>
+                <p class="name second-name">VIT, Vellore</p>
               </div>
               <div class="card"><img
                   src="https://images.unsplash.com/photo-1425342605259-25d80e320565?auto=format&amp;fit=crop&amp;w=750&amp;q=80&amp;ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" />
                 <div class="info">
-                  <h1>Road</h1>
-                  <p>Lorem Ipsum is simply dummy text from the printing and typeseting industry</p>
+                  <p class="fw-bold fs-6">Ex-CHRO Edelweiss, Unilever, Dr. Reddy’s</p>
+                  <p>Vikas is an HR veteran with 24 years of experience in the industry. He has managed diverse workforces, led strategy and change initiatives, built startups and has global experience. He is DISC, MBTI and Hogan certified professional.</p>
                   <a href="/"><i class="fa-brands fa-linkedin fa-xl linkedin-icon"></i></a>
                 </div>
-                <p class="name">Kalim Ali</p>
+                <p class="name">Vikas Bansal</p>
+                <p class="name second-name">SIBM Pune</p>
               </div>
 
             </div>
