--- a/about.html
+++ b/about.html
@@ -337,7 +337,7 @@
                   <p>Nitin has co-founded 2 unicorns and has scaled multiple businesses to $100M+ valuation. He has been
                     named in the Forbes India Tycoons of Tomorrow 2021 list and has won the ET Startup of the Year 2023.
                   </p>
-                  <a href="/"><i class="fa-brands fa-linkedin fa-xl linkedin-icon"></i></a>
+                  <a href="https://www.linkedin.com/in/nitin-jain-17b82310" target="_blank"><i class="fa-brands fa-linkedin fa-xl linkedin-icon"></i></a>
                 </div>
                 <p class="name">Nitin Jain</p>
                 <p class="name second-name">IIT Delhi Silver Medalist</p>
@@ -347,7 +347,7 @@
                 <div class="info">
                   <p class="fw-bold fs-6">Ex-McKinsey | Ex-Head of Strategy, Ratio</p>
                   <p>Kabir is a StraOps consultant turned operator. He has scaled multiple consumer tech products and categories at MPL and Rario.</p>
-                  <a href="/"><i class="fa-brands fa-linkedin fa-xl linkedin-icon"></i></a>
+                  <a href="https://www.linkedin.com/in/khattarkabir" target="_blank"><i class="fa-brands fa-linkedin fa-xl linkedin-icon"></i></a>
                 </div>
                 <p class="name">Kabir Khattar</p>
                 <p class="name second-name">IIM Lucknow</p>
@@ -359,7 +359,7 @@
                 <div class="info">
                   <p class="fw-bold fs-6">Ex-CEO & Founder, FTL</p>
                   <p>Shaaz is a tech entrepreneur and public speaker specializing in the AI/ML domain. He has authored influential AI papers and has scaled a gaming startup.</p>
-                  <a href="/"><i class="fa-brands fa-linkedin fa-xl linkedin-icon"></i></a>
+                  <a href="https://www.linkedin.com/in/syed-shaaz-548950bb" target="_blank"><i class="fa-brands fa-linkedin fa-xl linkedin-icon"></i></a>
                 </div>
                 <p class="name">Syed Shaaz</p>
                 <p class="name second-name">VIT, Vellore</p>
@@ -369,7 +369,7 @@
                 <div class="info">
                   <p class="fw-bold fs-6">Ex-CHRO Edelweiss, Unilever, Dr. Reddy’s</p>
                   <p>Vikas is an HR veteran with 24 years of experience in the industry. He has managed diverse workforces, led strategy and change initiatives, built startups and has global experience. He is DISC, MBTI and Hogan certified professional.</p>
-                  <a href="/"><i class="fa-brands fa-linkedin fa-xl linkedin-icon"></i></a>
+                  <a href="https://www.linkedin.com/in/vikas-bansal-5576683" target="_blank"><i class="fa-brands fa-linkedin fa-xl linkedin-icon"></i></a>
                 </div>
                 <p class="name">Vikas Bansal</p>
                 <p class="name second-name">SIBM Pune</p>
