--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
 
   <!-- All CSS files -->
-  <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./assets/css/all.min.css">
-  <link rel="stylesheet" href="./assets/css/swiper-bundle.min.css">
-  <link rel="stylesheet" href="./assets/css/progressbar.css">
-  <link rel="stylesheet" href="./assets/css/meanmenu.min.css">
-  <link rel="stylesheet" href="./assets/css/magnific-popup.css">
-  <link rel="stylesheet" href="./assets/css/master-online-meeting.css">
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/all.min.css">
+  <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
+  <link rel="stylesheet" href="assets/css/progressbar.css">
+  <link rel="stylesheet" href="assets/css/meanmenu.min.css">
+  <link rel="stylesheet" href="assets/css/magnific-popup.css">
+  <link rel="stylesheet" href="assets/css/master-online-meeting.css">
 
   <style>
     .enquiry-btn {
@@ -75,62 +75,18 @@
   <!-- offcanvas start  -->
   <div class="offcanvas-area">
     <div class="offcanvas-area-meta-wrapper">
-      <span id="close_offcanvas" class="close-offcanvas">
-        <img src="assets/imgs/icon/close.png" alt="close">
+      <span class="close-offcanvas">
       </span>
-      <div class="offcanvas-btn-wrapper">
-        <a target="_blank" href="https://themeforest.net/item/axtra-digital-agency-creative-portfolio-theme/43074408"
-          class="wc-btn wc-btn-default btn-hover-cropping">Purchase now</a>
+      <div class="offcanvas-btn-wrapper" id="close_offcanvas">
+        <img src="assets/imgs/icon/close.png" alt="close">
       </div>
     </div>
     <div class="offcanvas-area-menu-wrapper">
       <ul id="accordion" class="accordion">
-        <li>
-          <div class="link">Home
-            <img class="angle-down" src="assets/imgs/icon/angle-down.png" alt="icon image">
-          </div>
-          <ul class="submenu">
-            <li><a href="ai-content-writer.html">AI Content Writer</a></li>
-            <li><a href="ai-image-generator.html">AI Image Generator</a></li>
-            <li><a href="ai-chatbot.html">AI Chatbot</a></li>
-            <li><a href="ai-seo.html">AI SEO Software</a></li>
-            <li><a href="ai-software.html">AI Startups</a></li>
-            <li><a href="ai-video-editor.html">AI Video Editor</a></li>
-            <li><a href="booking.html">Booking Software</a></li>
-            <li><a href="online-meeting.html" class="active-page">Virtual Meeting</a></li>
-            <li><a href="crm.html">CRM Software</a></li>
-            <li><a href="customer-service.html">Customer Support</a></li>
-            <li><a href="mobile-apps.html">Mobile App / SASS</a></li>
-            <li><a href="marketing-automation.html">Marketing automation</a></li>
-          </ul>
-        </li>
-        <li>
+        <li><a href="/">Product</a></li>
+        <li><a href="https://talaura.ai/blog">Blogs</a></li>
+        <li><a href="/">News In Press</a></li>
         <li><a href="about.html">About</a></li>
-        <li>
-          <div class="link">Pages<img class="angle-down" src="assets/imgs/icon/angle-down.png" alt="icon image"></div>
-          <ul class="submenu">
-            <li><a href="integration.html">integration</a></li>
-            <li><a href="integration-single.html">integration single</a></li>
-            <li><a href="about.html">about</a></li>
-            <li><a href="contact.html">contact</a></li>
-            <li><a href="404.html">404</a></li>
-            <li><a href="pricing.html">pricing</a></li>
-            <li><a href="faq.html">faq</a></li>
-            <li><a href="all-template.html">video templete</a></li>
-            <li><a href="team.html">team page</a></li>
-            <li><a href="privacy-policy.html">privacy policy</a></li>
-          </ul>
-        </li>
-        <li><a href="pricing.html">Pricing</a></li>
-        <li><a href="team.html">Team</a></li>
-        <li><a href="faq.html">FaQ</a></li>
-        <li>
-          <div class="link">Blog<img class="angle-down" src="assets/imgs/icon/angle-down.png" alt="icon image"></div>
-          <ul class="submenu">
-            <li><a href="blog.html">Our Blog</a></li>
-            <li><a href="blog-details.html">Blog Details</a></li>
-          </ul>
-        </li>
       </ul>
     </div>
   </div>
@@ -169,7 +125,7 @@
             <ul>
               <li><a href="/">Product</a>
               </li>
-              <li><a href="maintainence.html">Blogs</a></li>
+              <li><a href="http://talaura.ai/blog">Blogs</a></li>
               <li><a href="news-in-press.html">News In Press</a></li>
               <li><a href="about.html">About</a></li>
             </ul>
