--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Sassly HTML5 Template">
 
-  <title>Talura</title>
+  <title>Talura | Contact</title>
 
   <!-- Fav Icon -->
   <link rel="icon" type="image/x-icon" href="../assets/imgs/logo/favicon.webp">
@@ -42,9 +42,7 @@
           <span data-text="L" class="characters">L</span>
           <span data-text="U" class="characters">U</span>
           <span data-text="R" class="characters">R</span>
-          <span data-text="A" class="characters">A&nbsp;</span>
-          <span data-text="A" class="characters">&nbsp;A</span>
-          <span data-text="I" class="characters">I</span>
+          <span data-text="A" class="characters">A</span>
         </div>
       </div>
       <div class="loader-section section-left"></div>
@@ -54,7 +52,7 @@
 
   <!-- Cursor Animation -->
   <div class="cursor1"></div>
-
+  
   <!-- Sroll to top -->
   <div class="progress-wrap">
     <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
@@ -66,11 +64,13 @@
   <!-- offcanvas start  -->
   <div class="offcanvas-area">
     <div class="offcanvas-area-meta-wrapper">
-      <span class="close-offcanvas">
-      </span>
-      <div class="offcanvas-btn-wrapper" id="close_offcanvas">
-        <img src="assets/imgs/icon/close.png" alt="close">
+      <div class="offcanvas-btn-wrapper opacity-0">
+        <a target="_blank" href="https://themeforest.net/item/axtra-digital-agency-creative-portfolio-theme/43074408"
+        class="wc-btn wc-btn-default btn-hover-cropping">Purchase now</a>
       </div>
+      <span id="close_offcanvas" class="close-offcanvas">
+        <img src="assets/imgs/icon/close.png" alt="close">
+      </span>
     </div>
     <div class="offcanvas-area-menu-wrapper">
       <ul id="accordion" class="accordion">
@@ -108,7 +108,7 @@
         <div class="header__logo">
           <a href="index.html">
             <img src="assets/imgs/logo/logo-2.webp" class="normal-logo" alt="Site Logo">
-            <img src="assets/imgs/logo/logo-13.webp" class="sticky-logo" alt="Site Logo">
+            <img src="assets/imgs/logo/logo-13.webp" class="sticky-logo" alt="Site Logo" style="display: none;">
           </a>
         </div>
         <div class="header__nav">
@@ -278,7 +278,7 @@
                     <span class="icon"><i class="fa-regular fa-envelope" style="font-size: 20px;"></i></span>
                   </div>
                   <div class="policy-field">
-                    <input type="checkbox" id="policy" name="policy" value="Boat" >
+                    <input type="checkbox" id="policy" name="policy" value="Boat" style="margin-left: 27px;">
                     <label for="policy"> I agree with <span>privacy policy</span></label>
                   </div>
                 </form>
