--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
           <span data-text="L" class="characters">L</span>
           <span data-text="U" class="characters">U</span>
           <span data-text="R" class="characters">R</span>
-          <span data-text="A" class="characters">A&nbsp;</span>
-          <span data-text="A" class="characters">&nbsp;A</span>
-          <span data-text="I" class="characters">I</span>
+          <span data-text="A" class="characters">A</span>
         </div>
       </div>
       <div class="loader-section section-left"></div>
@@ -75,11 +73,13 @@
   <!-- offcanvas start  -->
   <div class="offcanvas-area">
     <div class="offcanvas-area-meta-wrapper">
-      <span class="close-offcanvas">
-      </span>
-      <div class="offcanvas-btn-wrapper" id="close_offcanvas">
-        <img src="assets/imgs/icon/close.png" alt="close">
+      <div class="offcanvas-btn-wrapper opacity-0">
+        <a target="_blank" href="https://themeforest.net/item/axtra-digital-agency-creative-portfolio-theme/43074408"
+        class="wc-btn wc-btn-default btn-hover-cropping">Purchase now</a>
       </div>
+      <span id="close_offcanvas" class="close-offcanvas">
+        <img src="assets/imgs/icon/close.png" alt="close">
+      </span>
     </div>
     <div class="offcanvas-area-menu-wrapper">
       <ul id="accordion" class="accordion">
