--- a/about.html
+++ b/about.html
@@ -319,7 +319,7 @@
                     <i class="fa-brands fa-linkedin fa-xl linkedin-icon"></i>
                   </div>
                   <p class="name">Nitin Jain</p>
-                  <p class="name second-name">Co Founder</p>
+                  <p class="name second-name">Co-Founder</p>
                 </a>
               </div>
               <div class="card">
@@ -332,7 +332,7 @@
                     <i class="fa-brands fa-linkedin fa-xl linkedin-icon"></i>
                   </div>
                   <p class="name">Kabir Khattar</p>
-                  <p class="name second-name">Co Founder</p>
+                  <p class="name second-name">Co-Founder</p>
                 </a>
               </div>
 
@@ -347,7 +347,7 @@
                     <i class="fa-brands fa-linkedin fa-xl linkedin-icon"></i>
                   </div>
                   <p class="name">Syed Shaaz</p>
-                  <p class="name second-name">Co Founder</p>
+                  <p class="name second-name">Co-Founder</p>
                 </a>
               </div>
               <div class="card">
@@ -361,7 +361,7 @@
                     <i class="fa-brands fa-linkedin fa-xl linkedin-icon"></i>
                   </div>
                   <p class="name">Vikas Bansal</p>
-                  <p class="name second-name">Co Founder</p>
+                  <p class="name second-name">Co-Founder</p>
                 </a>
               </div>
 
